# Spleeter

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
audio/: ffmpeg.py
configs/: 2stems.json  4stems.json  5stems.json
model/: Separator.py  __init__.py
nets/: SpleeterNet.py
